Rounds now are associated with a course

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Listing courses</h1>
 
-<table>
+<div class="div_content">
+<table id="myTable">
   <tr>
     <th>Name</th>
     <th>Par</th>
@@ -23,3 +24,5 @@
 <br />
 
 <%= link_to 'New Course', new_course_path %>
+
+</div>
