--- a/app/views/rounds/index.html.erb
+++ b/app/views/rounds/index.html.erb
@@ -18,7 +18,7 @@
   <tr>
     <td><%= round.date %></td>
     <td><%= round.score %></td>
-	<td><%= @course_played %></td>
+	<td><%= round.course_name %></td>
     <td><%= link_to 'View', round %></td>
   </tr>
 <% end %>
