--- a/app/views/rounds/edit.html.erb
+++ b/app/views/rounds/edit.html.erb
@@ -4,3 +4,4 @@
 
 <%= link_to 'Show', @round %> |
 <%= link_to 'Back', rounds_path %>
+<%= link_to 'Delete', round_path(@round), :method => :delete, :confirm => "Are you sure you want to delete this student? All previous information be lost" %>
